Fix admin lists to not cut down the icons if content to wide and force word wrapping, also same for the tipsy tooltips.

--- a/template/admin.css
+++ b/template/admin.css
@@ -6,6 +6,12 @@
 	vertical-align: top;
 }
 
+.admin-content .list .auto-width {
+    max-width: 200px !important;
+    overflow: hidden;
+	word-wrap: break-word;
+}
+
 .admin-content-preview {
 	padding: 20px;
 	word-wrap: break-word;
